Fix navbar to top of page
- add class navbar-fixed-top
- add padding to row-fluid top to avoid overlap

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -50,6 +50,10 @@ input {
   width: 75%;
 }
 
+.row-fluid {
+  padding-top: 70px;
+}
+
 table {
   border: 1px solid black;
 }
